@@ -1,8 +1,8 @@
 Bundle: VR
 Priority: recommended
 Contains: MASS class nnet spatial
-Version: 7.2-27
-Date: 2006-03-10
+Version: 7.2-27.1
+Date: 2006-05-09
 Depends: R (>= 2.3.0), graphics, stats
 Suggests: lattice, nlme, survival
 Author: S original by Venables & Ripley.
@@ -13,4 +13,4 @@ BundleDescription: Functions and datasets to support Venables and
   Ripley, 'Modern Applied Statistics with S' (4th edition).
 License: GPL (version 2 or later)  See file LICENCE.
 URL: http://www.stats.ox.ac.uk/pub/MASS4/
-Packaged: Fri Mar 10 13:07:03 2006; ripley
+Packaged: Fri May 12 15:15:20 2006; ripley
