@@ -48,6 +48,7 @@ S3method(addterm, lm)
 S3method(addterm, mlm)
 S3method(addterm, negbin)
 S3method(addterm, survreg)
+S3method(anova, glmmPQL)
 S3method(anova, loglm)
 S3method(anova, negbin)
 S3method(anova, polr)
@@ -93,6 +94,7 @@ S3method(loglm1, data.frame)
 S3method(loglm1, default)
 S3method(loglm1, xtabs)
 S3method(logLik, fitdistr)
+S3method(logLik, glmmPQL)
 S3method(logLik, negbin)
 S3method(logtrans, default)
 S3method(logtrans, formula)
