@@ -20,7 +20,7 @@ linear model.
 \arguments{
 \item{object}{
 Fitted model object from a \code{Gamma} family or \code{quasi} family with
-\code{variance = mu^2}.
+\code{variance = "mu^2"}.
 }
 \item{it.lim}{
 Upper limit on the number of iterations.
@@ -73,7 +73,7 @@ Alpha: 538.13
    SE: 253.60
 }
 gm <- glm(Days + 0.1 ~ Age*Eth*Sex*Lrn,
-		quasi(link=log, variance=mu^2), quine, start = rep(0,32))
+	  quasi(link=log, variance="mu^2"), quine, start = rep(0,32))
 gamma.shape(gm, verbose = TRUE)
 \dontrun{
 Initial estimate: 1.0603
